Fixed word wrap bug in task text area

--- a/frontend/src/components/day/index.css
+++ b/frontend/src/components/day/index.css
@@ -4,6 +4,7 @@
   height: 100%;
   background-color: hsl(0, 6%, 93%);
   flex: 1;
+  min-width: 1%;
   border: outset black 1px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
